[package]
name = "gnss_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread","time"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.13", features = ["codec"] }
